--- a/src/components/CardsList/cardsList.module.css
+++ b/src/components/CardsList/cardsList.module.css
@@ -1,8 +1,8 @@
 .cardsLayout {
-  margin-top: 10rem;
+  margin: 10rem 0;
 
   display: flex;
-  align-items: center;
+  align-items: stretch;
   flex-direction: column;
 
   gap: 4rem;
