--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -8,14 +8,15 @@
 }
 .header {
   margin-top: 1rem;
-  z-index: 1;
+
   font-size: 3rem; /* Adjust font size as needed */
   font-weight: bold; /* Make the text bold */
+
   background: linear-gradient(135deg, #00aaff, #0047ab); /* Blue gradient */
+
   -webkit-background-clip: text; /* Clip the background to the text */
   -webkit-text-fill-color: transparent; /* Make the text color transparent */
   text-align: center; /* Center the text */
-  margin-top: 1rem; /* Add some margin */
 }
 
 .websiteLogo {
